--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "^16.11.38",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
+    "cssnano": "^5.1.12",
     "eslint": "^8.16.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^16.2.0",
@@ -34,6 +35,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "postcss": "^8.4.14",
     "prettier": "^2.6.2",
     "typescript": "^4.7.2"
   },
